# gui-for-cli

./: .coderabbit.yaml  .devconfig.example.toml  .gitignore  .jscpd.json  .swift-format  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  GUIForCLIWindows.sln  LICENSE  Makefile  Package.resolved  Package.swift  Project.swift  README.md  Tuist.swift  codecov.yml  make.ps1  manifest.schema.json  pyproject.toml
.github/: dependabot.yml
.greptile/: config.json  rules.md
Apps/DioxusShell/: Cargo.toml
Apps/DioxusShell/src/: main.rs
Apps/ImGui/: Cargo.toml
Apps/ImGui/src/: app.rs  args.rs  main.rs  state.rs  ui.rs  window.rs
Apps/ImGuiCpp/: CMakeLists.txt
Apps/ImGuiCpp/src/: ActionRenderer.cpp  ActionRenderer.hpp  AppState.cpp  AppState.hpp  Args.cpp  Bundle.cpp  ConfigStore.cpp  ControlRenderer.cpp  ControlRenderer.hpp  Execution.cpp  Execution.hpp  PathPicker.cpp  RenderHelpers.hpp  Renderer.cpp  TerminalRenderer.cpp  TerminalRenderer.hpp
Resources/: BuiltinStrings
WebUI/: app.mjs  index.html  package-lock.json  package.json  server.mjs  styles.css  tsconfig.json  tsconfig.nodegui.json  tsconfig.tui.json  tsconfig.web.json
WebUI/src-tauri/: Cargo.toml  tauri.conf.json
WebUI/src-tauri/src/: main.rs
aidocs/: agent-history-behavior-spec.md  benchmark-findings.md  cloud-agent-windows-benchmarks.md  flutter-benchmark.md  gio-benchmark.md  gui-toolkit-macos-benchmark-run.md  gui-toolkit-pr-results.md  imgui-benchmark.md  macos-perf-testing.md  new-imgui-benchmarks.md  new-mac-benchmark.md  plan.md  runtime-model-research.md  webui-modern-redesign-research-plan.md  windows-benchmark-summary.md  windows-benchmark.md  windows-native-implementation-plan.md
docs/: CHANGELOG.md  desktop-gui-experiments.md  distribution.md  site_generation.md  swift-windows.md
exp-platform/c/raygui/: CMakeLists.txt
exp-platform/c/raygui/src/: app.c  app.h  args.c  args.h  bundle.c  bundle.h  bundle_free.c  command_runner.c  command_runner.h  data_source.c  data_source.h  main.c  setup_actions.c  state.c  state.h  string_map.c  string_map.h  ui.c  ui.h  utils.c  utils.h
exp-platform/cpp/qt-qml/: CMakeLists.txt
exp-platform/cpp/qt-qml/cmake/: ValidateSources.cmake
exp-platform/cpp/qt-qml/qml/: ActionButton.qml  AppShell.qml  ConfirmationDialog.qml  ControlField.qml  HeaderBar.qml  LibraryList.qml  Main.qml  PageView.qml  SectionView.qml  Sidebar.qml  TerminalDrawer.qml
exp-platform/cpp/qt-qml/src/: Args.cpp  Args.hpp  BundleLoader.cpp  BundleLoader.hpp  CommandRunner.cpp  CommandRunner.hpp  Controller.cpp  Controller.hpp  JsonUtils.cpp  JsonUtils.hpp  StateStore.cpp  StateStore.hpp  main.cpp
exp-platform/python/shared/: pyproject.toml
exp-platform/python/shared/gui_for_cli_runtime/: __init__.py  bundle.py  cli.py  execution.py  localization.py
exp-platform/python/textual/: pyproject.toml
exp-platform/python/textual/gui_for_cli_textual/: __init__.py  __main__.py  args.py
exp-platform/python/textual/gui_for_cli_textual/runtime/: __init__.py  bundle.py  config.py  execution.py  interpolation.py  state.py
exp-platform/python/textual/gui_for_cli_textual/ui/: app.py  page_view.py  sidebar.py  terminal.py
exp-platform/python/textual/tests/: test_conformance.py  test_runtime.py
exp-platform/python/tkinter/: pyproject.toml
exp-platform/python/tkinter/gui_for_cli_tkinter/: __init__.py  __main__.py  app.py
exp-platform/python/tkinter/gui_for_cli_tkinter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
exp-platform/python/toga/: pyproject.toml
exp-platform/python/toga/src/gui_for_cli_toga/: __init__.py  benchmark.py  bundle_loader.py  cli.py  commands.py  config_files.py  localization.py  manifest_utils.py  models.py  process_runner.py  rows.py  runtime.py
exp-platform/python/toga/src/gui_for_cli_toga/ui/: __init__.py  app.py
exp-platform/python/toga/tests/: test_headless_runtime.py
exp-platform/python/wx/: pyproject.toml
exp-platform/python/wx/gui_for_cli_wx/: __init__.py  __main__.py  app.py
exp-platform/rust/egui/: Cargo.toml
exp-platform/rust/egui/src/: app.rs  args.rs  main.rs  ui.rs  ui_page.rs  ui_sidebar.rs  ui_terminal.rs  ui_widgets.rs
exp-platform/rust/gtk4/: Cargo.toml
exp-platform/rust/gtk4/src/: app_model.rs  main.rs  snapshot.rs
exp-platform/rust/gtk4/src/gui/: controls.rs  mod.rs  page.rs  sidebar.rs  terminal.rs  window.rs
exp-platform/rust/iced/: Cargo.toml
exp-platform/rust/iced/src/: app.rs  app_benchmark.rs  args.rs  main.rs  messages.rs  metadata.rs  ui.rs  ui_controls.rs  ui_sidebar.rs  ui_terminal.rs  view_values.rs
exp-platform/rust/xilem-vello/: Cargo.toml
exp-platform/rust/xilem-vello/src/: args.rs  data_view.rs  main.rs  metadata.rs  model.rs  model_benchmark.rs  model_tests.rs  xilem_app.rs
platform/typescript/web/packagers/tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json
platform/typescript/web/packagers/tauri/capabilities/: main.json
platform/typescript/web/packagers/tauri/src/: app_update.rs  main.rs  menu.rs  native_picker.rs  update_e2e_overlay.rs
scripts/: ax-smoke-ios.py  ax-smoke.py  benchmark-android.py  benchmark-flutter-macos.py  benchmark-flutter.ps1  benchmark-fyne-macos.py  benchmark-gio-macos.py  benchmark-ios-sim.py  benchmark-macos-process.py  benchmark-windows-app.ps1  benchmark-windows-webview2.ps1  build_site.py  capture-macos-screenshots.py  ci-changed-paths.py  ci-local.py  dev-register.py  dev-register.swift  dev.py  launch-flutter-slint.sh  lint-locales.py  lint-locales.swift  macos-sudo-session.sh  measure-startup-sequential.sh  package-windows-bootstrap.ps1  package-windows-gio.ps1  package-windows-msix.ps1  package-windows-webui.ps1  run-react-native-macos.sh  setup-hooks.py  setup-hooks.swift  site_frontmatter.py  site_html.py  site_layout.py  site_markdown.py  site_model.py  tuist.sh  ui-driver-lifecycle.mjs  validate-macos-action-e2e.sh  validate-macos-cold-install-uninstall.sh  validate-macos-swiftui-lifecycle.sh  (+9 more)
site/: docs.html  experiments.html  frontends.html  index.html  platform-lessons.html  wgsextract.html
site_src/: docs.md  (+5 more)
(+1266 files in other folders)
