[package]
name = "gui-for-cli-imgui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gui-for-cli-imgui"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
glium = { version = "0.35.0", default-features = false, features = ["glutin_backend"] }
glutin = "0.32"
glutin-winit = "0.5.0"
imgui = { version = "0.12.0", features = ["tables-api"] }
imgui-glium-renderer = "0.13.0"
imgui-winit-support = "0.13.0"
raw-window-handle = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
winit = { version = "0.30", features = ["rwh_06"] }
