[package]
name = "gui-for-cli-webui-tauri"
version = "0.1.0"
description = "Tauri shell for the GUI for CLI Web UI"
authors = ["GUI for CLI contributors"]
edition = "2021"

[[bin]]
name = "gui-for-cli-webui-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libc = "0.2"
tauri = { version = "2", features = [] }

[features]
bench-console = []
