[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gui-for-cli-tkinter"
version = "0.1.0"
description = "Experimental Python Tkinter renderer for GUI for CLI bundles"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
gui-for-cli-tkinter = "gui_for_cli_tkinter.__main__:main"

[tool.setuptools.packages.find]
include = ["gui_for_cli_tkinter*"]
