[project]
name = "gui-for-cli-toga"
version = "0.1.0"
description = "Experimental Python Toga/BeeWare renderer for GUI for CLI bundles"
requires-python = ">=3.11"
dependencies = [
  "toga>=0.5.0,<1.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
gui-for-cli-toga = "gui_for_cli_toga.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
