[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gui-for-cli-wx"
version = "0.1.0"
description = "Experimental Python wxPython renderer for GUI for CLI bundles"
requires-python = ">=3.11"
dependencies = ["gui-for-cli-runtime==0.1.0"]

[project.optional-dependencies]
ui = ["wxPython>=4.2"]

[project.scripts]
gui-for-cli-wx = "gui_for_cli_wx.__main__:main"

[tool.setuptools.packages.find]
include = ["gui_for_cli_wx*"]
