[package]
name = "gui-for-cli-gtk4"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gui-for-cli-gtk4"
path = "src/main.rs"

[features]
default = []
gtk-ui = ["dep:adw", "dep:gtk"]

[dependencies]
adw = { package = "libadwaita", version = "0.8", optional = true, features = ["v1_4", "gtk_v4_6"] }
anyhow = "1.0.102"
gtk = { package = "gtk4", version = "0.10", optional = true, features = ["v4_6"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
