[package]
name = "gui-for-cli-iced"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gui-for-cli-iced"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
iced = { version = "0.14.0", default-features = true, features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
