[package]
name = "gui-for-cli-xilem-vello"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gui-for-cli-xilem-vello"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
masonry = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
winit = "0.30.13"
xilem = "0.4.0"
