[package]
name = "gui-for-cli-webui-tauri"
version = "0.1.0"
description = "Tauri shell for the GUI for CLI Web UI"
authors = ["GUI for CLI contributors"]
edition = "2021"

[[bin]]
name = "gui-for-cli-webui-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libc = "0.2"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"

[features]
bench-console = []
